[gd_scene load_steps=5 format=2]

[ext_resource path="res://Pawn.gd" type="Script" id=1]
[ext_resource path="res://Img/chess-26784_960_720.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]

resource_name = "Move"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 5.94716, 9.8599 )

[node name="Pawn" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="." index="0"]

scale = Vector2( 0.06, 0.06 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 474, 680 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Move = SubResource( 1 )
blend_times = [  ]

[node name="Tween" type="Tween" parent="." index="2"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Area2D" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( -0.0612926, -0.226782 )
scale = Vector2( 2.37699, 2.05246 )
shape = SubResource( 2 )

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]

[connection signal="tween_started" from="Tween" to="." method="_on_Tween_tween_started"]

[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]


